# gatv2

./: README.md  pyproject.toml
examples/: cora.py
gatv2/: GraphAttention.py  GraphAttentionLayer.py  __init__.py
