[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gatv2"
version = "0.0.01"
authors = [
  { name="Taha Shieenavaz", email="tahashieenavaz@gmail.com" },
]
description = "Graph Attention v2 implementation by Shaked Brody and Uri Alon and Eran Yahav."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["torch"]
keywords = ["deep learning", "graph", "attention", "graph attention"]
license = { file = "LICENSE" }
urls = { Homepage="https://github.com/tahashieenavaz/gatv2", Repository="https://github.com/tahashieenavaz/gatv2", Documentation="https://github.com/tahashieenavaz/gatv2#readme" }

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
gatv2 = ["*.md", "*.txt", "*.png"]
